; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dialog/extr_formbox.c_prev_valid_buttonindex.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dialog/extr_formbox.c_prev_valid_buttonindex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sTEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @prev_valid_buttonindex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prev_valid_buttonindex(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @dlg_prev_ok_buttonindex(i32 %7, i32 %8)
  store i32 %9, i32* %4, align 4
  br label %10

10:                                               ; preds = %19, %3
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %10
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @sTEXT, align 4
  %16 = icmp eq i32 %14, %15
  br label %17

17:                                               ; preds = %13, %10
  %18 = phi i1 [ false, %10 ], [ %16, %13 ]
  br i1 %18, label %19, label %23

19:                                               ; preds = %17
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @sTEXT, align 4
  %22 = call i32 @dlg_prev_ok_buttonindex(i32 %20, i32 %21)
  store i32 %22, i32* %4, align 4
  br label %10

23:                                               ; preds = %17
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @dlg_prev_ok_buttonindex(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
